--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bluebird": "^3.7.2",
     "classnames": "^2.2.6",
     "codecov": "^3.7.2",
+    "dragonchain-sdk": "^4.3.3",
     "gatsby": "^2.24.33",
     "gatsby-cli": "^2.12.79",
     "gatsby-link": "^2.4.13",
